# turbochess-rs

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  lookup.rs  testing.rs  types.rs
