[package]
name = "turbochess"
version = "0.1.0"
edition = "2021"
authors = ["UPL"]
description = "A fast chess move generator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
term-table = "1.3.2"
